# GPT-from-scratch

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml  test_stuff.ipynb
data/tiny-stories/: download_data.sh
data/tokenizer/: taylorswift.txt
src/: __init__.py  config.py  data.py  decoder.py  gpt.py  inference.py  model.py  train.py
src/configs/: logging.py  model.py  tokenizer.py  training.py
src/data/: data_loader.py
src/logger/: __init__.py  logger.py
src/tokenizer/: bpe.py  tiktoken.py  train.py
