[project]
name = "gpt-from-scratch"
version = "0.1.0"
description = "Hi"
readme = "README.md"
requires-python = "==3.12.11"
dependencies = [
    "mlflow==3.6.0",
    "numba==0.62.1",
    "numpy==2.3.3",
    "nvidia-ml-py==13.580.82",
    "psutil==7.1.3",
    "pyrsmi==1.0.0",
    "python-dotenv==1.2.1",
    "regex==2024.11.6",
    "ruff==0.14.4",
    "torch==2.8.0",
]
